# probabilities

./: LICENSE  README.md  probabilities.cabal
app/: Main.hs
src/: Examples.hs
test/: Spec.hs
