name:                probabilities
version:             0.1.0.0
synopsis:            Examples from Functional Pearl: Probabilistic Functional Programming in Haskell 
description:         Please see README.md
homepage:            https://github.com/mmisamore/probabilities#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Misamore 
maintainer:          example@example.com
copyright:           2016 Michael Misamore 
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Examples 
  build-depends:       base >= 4.7 && < 5
                       , random >= 1.1
                       , containers >= 0.5.6.2
  default-language:    Haskell2010

executable probabilities-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , probabilities
  default-language:    Haskell2010

test-suite probabilities-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , probabilities
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmisamore/probabilities
